force-app/main/default/objects/Activity/fields/Date_IC_Alleged__c.field-meta.xml
<CustomField>
    <fullName>Date_IC_Alleged__c</fullName>
    <label>Date IC Alleged</label>
    <type>Date</type>
</CustomField>