force-app/main/default/objects/Activity/fields/Date_of_Determination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Determination__c</fullName>
    <label>Date of Determination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IC Established - Dismissed</fullName>
            </value>
            <value>
                <fullName>Settled - No IC Determination Made</fullName>
            </value>
            <value>
                <fullName>Settled - Employee status established</fullName>
            </value>
            <value>
                <fullName>Referred to hearing for IC Determination</fullName>
            </value>
            <value>
                <fullName>Claim Closed - No Determination Made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>