force-app/main/default/objects/Activity/fields/days_out__c.field-meta.xml
<CustomField>
    <fullName>days_out__c</fullName>
    <description>used to calculate the number of days into the future for business hours.</description>
    <label>Days Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>