force-app/main/default/objects/Activity/fields/Defendant_ID__c.field-meta.xml
<CustomField>
    <fullName>Defendant_ID__c</fullName>
    <label>Defendant (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>