force-app/main/default/objects/Activity/fields/Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to mark Tasks created by an autolaunched flow that has detected duplicate person accounts from when a new community user has self-registered.</description>
    <label>Duplicate Account</label>
    <type>Checkbox</type>
</CustomField>