force-app/main/default/objects/Activity/fields/Hearing_Duration_Other__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Duration_Other__c</fullName>
    <label>Hearing Duration Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>