force-app/main/default/objects/Activity/fields/Held_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Held_By_ID__c</fullName>
    <label>Held By (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>