force-app/main/default/objects/Activity/fields/Held_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Held_By_Name__c</fullName>
    <label>Held By (Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>