force-app/main/default/objects/Activity/fields/IC_Alleged_at_Hearing__c.field-meta.xml
<CustomField>
    <fullName>IC_Alleged_at_Hearing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IC Alleged at Hearing</label>
    <type>Checkbox</type>
</CustomField>