force-app/main/default/objects/Activity/fields/Independent_Contractor_Determination__c.field-meta.xml
<CustomField>
    <fullName>Independent_Contractor_Determination__c</fullName>
    <label>Independent Contractor Determination</label>
    <type>TextArea</type>
</CustomField>