force-app/main/default/objects/Activity/fields/Late__c.field-meta.xml
<CustomField>
    <fullName>Late__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late</label>
    <type>Checkbox</type>
</CustomField>