force-app/main/default/objects/Activity/fields/Mail_Received_From__c.field-meta.xml
<CustomField>
    <fullName>Mail_Received_From__c</fullName>
    <label>Mail Received From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail received from Plaintiff/Representative</fullName>
            </value>
            <value>
                <fullName>Mail received from Defendant/Representative</fullName>
            </value>
            <value>
                <fullName>Mail Received From Non-Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>