force-app/main/default/objects/Activity/fields/Mail_Received_Type__c.field-meta.xml
<CustomField>
    <fullName>Mail_Received_Type__c</fullName>
    <label>Mail Received Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mail_Received_From__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Supplemental Claim Information</fullName>
            </value>
            <value>
                <fullName>Change of Address</fullName>
            </value>
            <value>
                <fullName>Returned mail addressed to Plaintiff/Rep</fullName>
            </value>
            <value>
                <fullName>Signed Complaint Form</fullName>
            </value>
            <value>
                <fullName>Signed Certified Mail Waiver</fullName>
            </value>
            <value>
                <fullName>Request for Continuance</fullName>
            </value>
            <value>
                <fullName>Signed Release</fullName>
            </value>
            <value>
                <fullName>Request for Attorney Representation</fullName>
            </value>
            <value>
                <fullName>Appeal by Plaintiff</fullName>
            </value>
            <value>
                <fullName>Response to claim from Defendant</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Notice</fullName>
            </value>
            <value>
                <fullName>Completed Workers’ Comp. Form</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Returned mail addressed to Defendant/Rep</fullName>
            </value>
            <value>
                <fullName>Settlement Offer Received</fullName>
            </value>
            <value>
                <fullName>Hearing Answer</fullName>
            </value>
            <value>
                <fullName>Appeal by Defendant</fullName>
            </value>
            <value>
                <fullName>Request for LC 98 (f) Relief</fullName>
            </value>
            <value>
                <fullName>Response from City Business License</fullName>
            </value>
            <value>
                <fullName>Response from County Registrar/Recorder</fullName>
            </value>
            <value>
                <fullName>Response from Legal</fullName>
            </value>
            <value>
                <fullName>Response from other DLSE Unit</fullName>
            </value>
            <value>
                <fullName>Request for Continuance –Citing Deputy</fullName>
            </value>
            <value>
                <fullName>Address Correction from USPS</fullName>
            </value>
            <value>
                <fullName>Judgment Received from Court</fullName>
            </value>
            <value>
                <fullName>Reassignment of Judgment from court</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>