force-app/main/default/objects/Activity/fields/Mail_Returned__c.field-meta.xml
<CustomField>
    <fullName>Mail_Returned__c</fullName>
    <label>Mail Returned</label>
    <type>Date</type>
</CustomField>