force-app/main/default/objects/Activity/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting</label>
    <referenceTo>Hearing__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>