force-app/main/default/objects/Activity/fields/Other_Form__c.field-meta.xml
<CustomField>
    <fullName>Other_Form__c</fullName>
    <label>Other Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>