force-app/main/default/objects/Activity/fields/Other_Mail_Received_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Mail_Received_Type__c</fullName>
    <label>Other Mail Received Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>