force-app/main/default/objects/Activity/fields/Postponement__c.field-meta.xml
<CustomField>
    <fullName>Postponement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postponement</label>
    <type>Checkbox</type>
</CustomField>