force-app/main/default/objects/Activity/fields/Previously_Assigned_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Previously_Assigned_To_ID__c</fullName>
    <label>Previously Assigned To ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>