force-app/main/default/objects/Activity/fields/Response_Due__c.field-meta.xml
<CustomField>
    <fullName>Response_Due__c</fullName>
    <label>Response Due</label>
    <type>Date</type>
</CustomField>