force-app/main/default/objects/Activity/fields/Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Response_Received__c</fullName>
    <label>Response Received</label>
    <type>Date</type>
</CustomField>