force-app/main/default/objects/Activity/fields/Scheduled_beyond_120__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_beyond_120__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hearing Scheduled Beyond 120</label>
    <type>Checkbox</type>
</CustomField>