force-app/main/default/objects/Activity/listViews/AllActivities.listView-meta.xml
<ListView>
    <fullName>AllActivities</fullName>
    <filterScope>Everything</filterScope>
    <label>All Activities</label>
    <language>en_US</language>
</ListView>