force-app/main/default/objects/Activity/listViews/HearingsToday.listView-meta.xml
<ListView>
    <fullName>HearingsToday</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event.Hearing</value>
    </filters>
    <filters>
        <field>EVENT.START_DATE_TIME</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>EVENT.START_DATE_TIME</field>
        <operation>lessThan</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Hearings Today</label>
</ListView>